# afalg_engine

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  README.md  afalg.c
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
